[package]
name = "multirep"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Replaces multiple patterns at a time."
documentation = "https://docs.rs/multirep"
readme = "README.md"
repository = "https://github.com/snylonue/multirep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
